--- a/e2e/package.json
+++ b/e2e/package.json
@@ -4,11 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "wdio": "wdio run ./wdio.conf.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webdriverio": "^8.16.22"
+    "@wdio/appium-service": "^8.16.22",
+    "@wdio/cli": "^8.16.22",
+    "@wdio/cucumber-framework": "^8.16.22",
+    "@wdio/local-runner": "^8.16.22",
+    "@wdio/spec-reporter": "^8.16.22",
+    "appium-uiautomator2-driver": "^2.29.10",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
+    "wdio-video-reporter": "^4.0.5",
   }
 }
